# actor-camoufox-scraper

./: Dockerfile  README.md  pyproject.toml
.actor/: actor.json  input_schema.json
src/: input_handling.py  main.py
